@@ -10,6 +10,7 @@ import android.text.Spannable;
 import android.text.SpannableStringBuilder;
 import android.text.TextWatcher;
 import android.util.Log;
+import android.util.TypedValue;
 import android.view.View;
 import android.widget.EditText;
 import android.widget.ListView;
@@ -41,17 +42,16 @@ public class MentionControlViewModel {
 
     public static final String MENTION_TYPE_MESSAGE = "mention_type_message";
     public static final String MENTION_TYPE_FILE_COMMENT = "mention_type_file_comment";
-    public static final int MENTION_MEMBER_DELETE = 0x01;
-    public static final int MENTION_MEMBER_INSERT = 0x02;
 
-    private RecyclerView searchMemberListView;
-    private EditText editText;
+    private RecyclerView lvSearchMember;
+    private EditText etMessage;
 
     // for Message List View
-    private RecyclerView messageListView;
+    private RecyclerView lvMessage;
 
     // for File comment List View
-    private ListView fileCommentListView;
+    private ListView lvFileComment;
+
     private KeyboardHeightModel keyboardHeightModel;
     private SearchMemberModel searchMemberModel;
 
@@ -73,30 +73,46 @@ public class MentionControlViewModel {
     private TextWatcher textWatcher;
     private OnMentionViewShowingListener onMentionViewShowingListener;
 
+    // 멘션 선택된 멤버 리스트의 사본
     // 클립 보드에서 CUT(잘라내기) 시 해당 정보를 한꺼번에 잃기 때문에 사본을 저장할 필요성 있음.
     private LinkedHashMap<Integer, SearchedItemVO> cloneSelectedMemberHashMap;
 
-    public MentionControlViewModel(Activity activity, RecyclerView searchMemberListView,
-                                   EditText editText, RecyclerView messageListView,
-                                   List<Integer> roomIds) {
-        this.messageListView = messageListView;
-        this.mentionType = MENTION_TYPE_MESSAGE;
-        init(activity, searchMemberListView, editText, roomIds);
+    public MentionControlViewModel(Activity activity,
+                                   EditText editText,
+                                   RecyclerView lvSearchMember, View lvMessage,
+                                   List<Integer> roomIds,
+                                   String mentionType) {
+
+        this.mentionType = mentionType;
+        if (mentionType.equals(MENTION_TYPE_MESSAGE)) {
+            this.lvMessage = (RecyclerView) lvMessage;
+        } else if (mentionType.equals(MENTION_TYPE_FILE_COMMENT)) {
+            this.lvFileComment = (ListView) lvMessage;
+        }
+
+        init(activity, lvSearchMember, editText, roomIds);
+
     }
 
-    public MentionControlViewModel(Activity activity, RecyclerView searchMemberListView,
-                                   EditText editText, ListView fileCommentListView,
-                                   List<Integer> roomIds) {
-        this.fileCommentListView = fileCommentListView;
-        this.mentionType = MENTION_TYPE_FILE_COMMENT;
-        init(activity, searchMemberListView, editText, roomIds);
+    public static MentionControlViewModel newInstance(Activity activity,
+                                                      EditText editText,
+                                                      RecyclerView lvSearchMember, View lvMessage,
+                                                      List<Integer> roomIds,
+                                                      String mentionType) {
+        return new MentionControlViewModel(activity,
+                editText,
+                lvSearchMember, lvMessage,
+                roomIds,
+                mentionType);
     }
 
-    private void init(Activity activity, RecyclerView searchMemberListView, EditText editText,
+    private void init(Activity activity,
+                      RecyclerView lvSearchMember,
+                      EditText editText,
                       List<Integer> roomIds) {
 
-        this.searchMemberListView = searchMemberListView;
-        this.editText = editText;
+        this.lvSearchMember = lvSearchMember;
+        this.etMessage = editText;
         this.roomIds = roomIds;
 
         addTextWatcher(editText);
@@ -109,8 +125,8 @@ public class MentionControlViewModel {
         LinearLayoutManager layoutManager = new LinearLayoutManager(activity,
                 LinearLayoutManager.VERTICAL, false);
         layoutManager.setStackFromEnd(true);
-        searchMemberListView.setLayoutManager(layoutManager);
-        searchMemberListView.setAdapter(new MentionMemberListAdapter(
+        lvSearchMember.setLayoutManager(layoutManager);
+        lvSearchMember.setAdapter(new MentionMemberListAdapter(
                 searchMemberModel.getUserSearchByName("", null)));
 
         if (keyboardHeightModel.getOnKeyboardShowListener() == null) {
@@ -178,14 +194,14 @@ public class MentionControlViewModel {
                     afterText.substring(0, tv.getSelectionStart()));
             if (tempString != null) {
 
-                editText.removeTextChangedListener(textWatcher);
+                etMessage.removeTextChangedListener(textWatcher);
                 int starIndex = tv.getSelectionStart() - tempString.length();
                 int endIndex = tv.getSelectionStart();
-                editText.setText(s.delete(starIndex, endIndex));
+                etMessage.setText(s.delete(starIndex, endIndex));
                 tempString += "\u2063";
                 removedText = tempString;
-                editText.addTextChangedListener(textWatcher);
-                editText.setSelection(starIndex);
+                etMessage.addTextChangedListener(textWatcher);
+                etMessage.setSelection(starIndex);
 
             } else {
 
@@ -193,7 +209,7 @@ public class MentionControlViewModel {
 
             }
 
-            restoreOrDeleteSelectedMentionMemberInfo(MENTION_MEMBER_DELETE, removedText);
+            removeSelectedMentionMemberInfo(removedText);
 
         }
 
@@ -222,6 +238,7 @@ public class MentionControlViewModel {
 
     }
 
+    // @ 이후로 부터 검색에 필요한 이름을 얻어오는 메서드
     public String getMentionSearchName(CharSequence cs) {
         Pattern p = Pattern.compile("(?:(?:^|\\s)([@\\uff20]((?:[^@\\uff20]){0,30})))$");
         Matcher matcher = p.matcher(cs);
@@ -245,34 +262,37 @@ public class MentionControlViewModel {
         return null;
     }
 
+    // 실제 화면에 멘션 가능한 사람들을 보여주는 메서드
     private void showSearchMembersInfo(String searchString) {
         MentionMemberListAdapter mentionMemberListAdapter =
-                (MentionMemberListAdapter) searchMemberListView.getAdapter();
+                (MentionMemberListAdapter) lvSearchMember.getAdapter();
         mentionMemberListAdapter.setSearchedMembersList(
                 searchMemberModel.getUserSearchByName(searchString, selectedMemberHashMap));
     }
 
+    // 검색 대상 리스트를 모두 삭제하는 메서드
     private void removeAllMemberList() {
         MentionMemberListAdapter mentionMemberListAdapter =
-                (MentionMemberListAdapter) searchMemberListView.getAdapter();
+                (MentionMemberListAdapter) lvSearchMember.getAdapter();
         mentionMemberListAdapter.clearMembersList();
     }
 
+    // 멘션 가능한 멤버 리스트 뷰의 view단을 컨트롤 하는 메서드
     private void showListView(boolean isShow) {
 
         if (isShow) {
-            searchMemberListView.setVisibility(View.VISIBLE);
-            if (messageListView != null) {
-                messageListView.setVisibility(View.INVISIBLE);
-            } else if (fileCommentListView != null) {
-                fileCommentListView.setVisibility(View.INVISIBLE);
+            lvSearchMember.setVisibility(View.VISIBLE);
+            if (lvMessage != null) {
+                lvMessage.setVisibility(View.INVISIBLE);
+            } else if (lvFileComment != null) {
+                lvFileComment.setVisibility(View.INVISIBLE);
             }
         } else {
-            searchMemberListView.setVisibility(View.INVISIBLE);
-            if (messageListView != null) {
-                messageListView.setVisibility(View.VISIBLE);
-            } else if (fileCommentListView != null) {
-                fileCommentListView.setVisibility(View.VISIBLE);
+            lvSearchMember.setVisibility(View.INVISIBLE);
+            if (lvMessage != null) {
+                lvMessage.setVisibility(View.VISIBLE);
+            } else if (lvFileComment != null) {
+                lvFileComment.setVisibility(View.VISIBLE);
             }
         }
 
@@ -284,10 +304,11 @@ public class MentionControlViewModel {
 
     public List<SearchedItemVO> getMembersListByAdapter() {
         MentionMemberListAdapter mentionMemberListAdapter =
-                (MentionMemberListAdapter) searchMemberListView.getAdapter();
+                (MentionMemberListAdapter) lvSearchMember.getAdapter();
         return mentionMemberListAdapter.getSearchedMembersList();
     }
 
+    // editText로 부터 삭제된 스트링을 얻어오는 메서드
     private String returnRemoveText(String beforeText, String afterText, int currentSelection) {
         if (beforeTextCnt <= afterTextCnt) {
             return null;
@@ -300,46 +321,64 @@ public class MentionControlViewModel {
         return removedText;
     }
 
-    private void restoreOrDeleteSelectedMentionMemberInfo(int request, String rawMemberText) {
+    // 멘션된 멤버를 리스트에 저장하는 메서드
+    private void restoreSelectedMentionMemberInfo(String rawMemberText) {
         if (rawMemberText != null) {
             String id = "";
             Pattern p = Pattern.compile("(?:@)([^@]+)(?:\\u2063)(\\d+)(?:\\u2063)");
             Matcher matcher = p.matcher(rawMemberText);
             while (matcher.find()) {
                 id = matcher.group(2);
-                if (request == MENTION_MEMBER_INSERT) {
-                    selectedMemberHashMap.put(new Integer(id),
-                            getAllSelectableMembers().get(new Integer(id)));
-                } else if (request == MENTION_MEMBER_DELETE) {
-                    selectedMemberHashMap.remove(Integer.valueOf(id));
-                }
+                selectedMemberHashMap.put(new Integer(id),
+                        getAllSelectableMembers().get(new Integer(id)));
             }
         }
     }
 
+    // 멘션된 멤버를 리스트에서 제거하는 메서드
+    private void removeSelectedMentionMemberInfo(String rawMemberText) {
+        if (rawMemberText != null) {
+            String id = "";
+            Pattern p = Pattern.compile("(?:@)([^@]+)(?:\\u2063)(\\d+)(?:\\u2063)");
+            Matcher matcher = p.matcher(rawMemberText);
+            while (matcher.find()) {
+                id = matcher.group(2);
+                selectedMemberHashMap.remove(Integer.valueOf(id));
+            }
+        }
+    }
+
+    // 현재 토픽 또는 파일에서 멘션 가능한 모든 멤버들을 얻어오는 메서드
     public LinkedHashMap<Integer, SearchedItemVO> getAllSelectableMembers() {
         return searchMemberModel.getAllSelectableMembers();
     }
 
+    // 토픽 또는 파일의 정보 갱신으로 갱신된 멘션가능한 멤버들을 얻어오는 메서드
     public void refreshSelectableMembers(List<Integer> roomIds) {
         searchMemberModel.refreshSelectableMembers(roomIds, mentionType);
     }
 
+    // 멘션된 멤버들을 etMessage 뷰 단에서 하일라이트 처리하는 로직
     public void mentionedMemberHighlightInEditText(SearchedItemVO searchedItemVO) {
 
-        int selectionIndex = editText.getSelectionStart();
+        int selectionIndex = etMessage.getSelectionStart();
         int startIndex = selectionIndex - currentSearchKeywordString.length();
 
-        SpannableStringBuilder ssb = new SpannableStringBuilder(editText.getEditableText());
+        SpannableStringBuilder ssb = new SpannableStringBuilder(etMessage.getEditableText());
 
         MentionMessageSpannable spannable = new MentionMessageSpannable(
-                editText.getContext(),
+                etMessage.getContext(),
                 searchedItemVO.getName(),
-                editText.getContext().getResources()
+                etMessage.getContext().getResources()
                         .getDimensionPixelSize(R.dimen.jandi_mention_edit_text_item_font_size),
                 0xFFfefefe,
                 0xFF01a4e7
         );
+
+        float maginDp = 50;
+        float marginPx = TypedValue.applyDimension(TypedValue.COMPLEX_UNIT_DIP,
+                maginDp, etMessage.getContext().getResources().getDisplayMetrics());
+        spannable.setViewMaxWidthSize(etMessage.getWidth() - (int) marginPx);
 
         StringBuilder convertedTextBuilder = new StringBuilder();
 
@@ -349,18 +388,19 @@ public class MentionControlViewModel {
                 .append(searchedItemVO.getId())
                 .append("\u2063");
 
-        restoreOrDeleteSelectedMentionMemberInfo(MENTION_MEMBER_INSERT, "@" + convertedTextBuilder);
+        restoreSelectedMentionMemberInfo("@" + convertedTextBuilder);
 
         ssb.replace(startIndex, selectionIndex, convertedTextBuilder);
 
         ssb.setSpan(spannable, startIndex - 1, startIndex + convertedTextBuilder.length(),
                 Spannable.SPAN_EXCLUSIVE_EXCLUSIVE);
 
-        editText.setText(ssb, TextView.BufferType.SPANNABLE);
-        editText.setSelection(startIndex + convertedTextBuilder.length());
+        etMessage.setText(ssb, TextView.BufferType.SPANNABLE);
+        etMessage.setSelection(startIndex + convertedTextBuilder.length());
 
     }
 
+    // 현재까지의 editText에서 멘션 가공된 message와 mention object 리스트를 얻어오는 메서드
     private ResultMentionsVO getMentionInfoObject(String message,
                                                   LinkedHashMap<Integer, SearchedItemVO> selectedMembers,
                                                   LinkedHashMap<Integer, SearchedItemVO> selectableMembers) {
@@ -421,7 +461,7 @@ public class MentionControlViewModel {
     }
 
     public ResultMentionsVO getMentionInfoObject() {
-        return getMentionInfoObject(editText.getText().toString().trim(),
+        return getMentionInfoObject(etMessage.getText().toString().trim(),
                 selectedMemberHashMap, getAllSelectableMembers());
     }
 
@@ -443,9 +483,8 @@ public class MentionControlViewModel {
         selectedMemberHashMap.clear();
     }
 
-
     public boolean isMentionListVisible() {
-        return searchMemberListView.getVisibility() == View.VISIBLE;
+        return lvSearchMember.getVisibility() == View.VISIBLE;
     }
 
     public void dismissMentionList() {
@@ -453,24 +492,25 @@ public class MentionControlViewModel {
     }
 
     public void setTextOnClip(String pasteData) {
-        ClipboardManager clipBoard = (ClipboardManager) editText.getContext()
-                .getSystemService(editText.getContext().CLIPBOARD_SERVICE);
+        ClipboardManager clipBoard = (ClipboardManager) etMessage.getContext()
+                .getSystemService(etMessage.getContext().CLIPBOARD_SERVICE);
         clipBoard.removePrimaryClipChangedListener(clipboardListener);
-        android.content.ClipData clip = android.content.ClipData.newPlainText("Copied Text", pasteData);
+        android.content.ClipData clip =
+                android.content.ClipData.newPlainText("Copied Text", pasteData);
         clipBoard.setPrimaryClip(clip);
         clipBoard.addPrimaryClipChangedListener(clipboardListener);
     }
 
     public void removeClipboardListener() {
-        ClipboardManager clipBoard = (ClipboardManager) editText.getContext()
-                .getSystemService(editText.getContext().CLIPBOARD_SERVICE);
+        ClipboardManager clipBoard = (ClipboardManager) etMessage.getContext()
+                .getSystemService(etMessage.getContext().CLIPBOARD_SERVICE);
         clipBoard.removePrimaryClipChangedListener(clipboardListener);
     }
 
     public void registClipboardListener() {
         clipboardListener = new ClipboardListener();
-        ClipboardManager clipBoard = (ClipboardManager) editText.getContext()
-                .getSystemService(editText.getContext().CLIPBOARD_SERVICE);
+        ClipboardManager clipBoard = (ClipboardManager) etMessage.getContext()
+                .getSystemService(etMessage.getContext().CLIPBOARD_SERVICE);
         clipBoard.addPrimaryClipChangedListener(clipboardListener);
     }
 
@@ -479,37 +519,39 @@ public class MentionControlViewModel {
         void onMentionViewShowing(boolean isShowing);
     }
 
+    // 가공되지 않은 스트링이 클립보드에 복사되면 안되므로 별도의 처리 진행
     class ClipboardListener implements
             ClipboardManager.OnPrimaryClipChangedListener {
         public void onPrimaryClipChanged() {
 
-            if (editText == null)
+            if (etMessage == null)
                 return;
 
-            // if U cut the string in the editText, editText already removed all string.
+            // if U cut the string in the etMessage, etMessage already removed all string.
             String et = null;
             boolean isCut = false;
             if (afterText.length() == 0 && beforeText.length() > 0) {
                 et = beforeText;
                 isCut = true;
             } else {
-                et = editText.getText().toString();
+                et = etMessage.getText().toString();
             }
-            ClipboardManager clipBoard = (ClipboardManager) editText.getContext()
-                    .getSystemService(editText.getContext().CLIPBOARD_SERVICE);
+            ClipboardManager clipBoard = (ClipboardManager) etMessage.getContext()
+                    .getSystemService(etMessage.getContext().CLIPBOARD_SERVICE);
             CharSequence pasteData = "";
             ClipData.Item item = clipBoard.getPrimaryClip().getItemAt(0);
             pasteData = item.getText();
             if (et.contains(pasteData.toString())) {
                 String convertedMessage = null;
                 if (isCut) {
-                    convertedMessage = getMentionInfoObject(et, cloneSelectedMemberHashMap).getMessage();
+                    convertedMessage =
+                            getMentionInfoObject(et, cloneSelectedMemberHashMap).getMessage();
                 } else {
-                    convertedMessage = getMentionInfoObject(et, selectedMemberHashMap).getMessage();
+                    convertedMessage =
+                            getMentionInfoObject(et, selectedMemberHashMap).getMessage();
                 }
                 Log.e(convertedMessage, convertedMessage);
                 setTextOnClip(convertedMessage);
-
             }
 
         }
